--- a/CalculatorTest/CalculatorApp.Core/CalculatorApp.Core.csproj
+++ b/CalculatorTest/CalculatorApp.Core/CalculatorApp.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
 </Project>
